test/tests/stages/9_functions/valid/libraries/addition_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(add)
  (
  int
  identifier(x)
  ,
  int
  identifier(y)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(add)
  (
  const int(1)
  ,
  const int(2)
  )
  ;
  }
