test/tests/stages/9_functions/invalid_types/extra_credit/bitwise_op_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(x)
  >>
  const int(2)
  ;
  return
  const int(0)
  ;
  }
